# trading-rfq-python

./: .gitignore  README.md  bytewax_pipeline.py  docker-compose.yml  instruments_config.py  main.py  models.py  pyproject.toml  pyrightconfig.json  run_all.sh  websocket_server.py
.claude/: settings.json
mock/local/: seed_db.py
mock/upstream/: market_data_publisher.py  rfq_publisher.py
pipeline/: main.py  pipeline.py
pipeline/sinks/: websocket_sink.py
pipeline/sources/: nats_source.py  soul_source.py
services/: pricing_service.py
